2008-07-31  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/tracker-indexer/tracker-index.c
	* tests/tracker-indexer/tracker-index-test.c:
	When we added and removed a word before indexing, the word was
	saved with score 0 (and it is wrong). Test and fix.
	
2008-07-31  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Add back some leak fixes, and
	fix some trailing whitespaces.

2008-07-31  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-processor.c:
	(crawler_processing_directory_cb): Send the folders as regular
	file to the indexer.

2008-07-31  Ivan Frade  <ivan.frade@nokia.com>
	
	* data/sqlite-stored-procs.sql
	* src/tracker-indexer/tracker-indexer-db.[ch]
	* src/tracker-indexer/tracker-indexer.c:
	Added deletion superpowers to the indexer.
	
2008-07-31  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-common/tracker-parser-test.c:
	Added test to tracker_parser_text_fast

2008-07-31  Ivan Frade  <ivan.frade@nokia.com>

	* utils/qdbm/Makefile.am
	* utils/qdbm/print-words.c
	* src/libtracker-common/tracker-index-item.[ch]
	* src/libtracker-common/tracker-index-item.h:
	(tracker_index_item_get_id): New method to access id.
	Using the common tracker-index-item instead a local copy in the
	utility program.
	
2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-utils.c (tracker_seconds_to_string):
	* src/tracker-indexer/tracker-indexer.c (index_text_contents)
	(process_file): Plug a few leaks.

2008-07-30  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata.[ch]: Make it accept just
	strings and lists of strings at the moment, strings are anyways needed
	to insert values through stored DB procedures, and there are some
	metadata types that will be difficult to store in a generic way.
	Since this API will be used from third party code, any failure in 
	there will be quite hard to debug if we use a generic API, (it will 