@@ -26,6 +26,23 @@
       <arg type="s" name="module" direction="in" />
       <arg type="as" name="files" direction="in" />
     </method>
+
+    <method name="PropertySet">
+      <annotation name="org.freedesktop.DBus.GLib.Async" value="true"/>
+      <arg type="s" name="service_type" direction="in" />
+      <arg type="s" name="uri" direction="in" />
+      <arg type="s" name="property" direction="in"/>
+      <arg type="as" name="values" direction="in"/>
+    </method>      
+
+    <method name="PropertyRemove">
+      <annotation name="org.freedesktop.DBus.GLib.Async" value="true"/>
+      <arg type="s" name="service_type" direction="in" />
+      <arg type="s" name="uri" direction="in" />
+      <arg type="s" name="property" direction="in"/>
+      <arg type="as" name="values" direction="in"/>
+    </method>
+
     <method name="Pause">
       <annotation name="org.freedesktop.DBus.GLib.Async" value="true"/>
     </method>
